menu list fixes overflow

--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -286,7 +286,7 @@
       z-index: -1;
       transform: translateX(100%);
       transition: all 0.3s ease-in;
-      // overflow: auto;
+      overflow: auto;
    }
 
    .menu__list-item {
